# cameraonTX2

./: README.md
solver2/src/JetsonOnboardCamera/: LICENSE  README.md
solver2/src/JetsonOnboardCamera/src/onboard_camera/: CMakeLists.txt  package.xml
solver2/src/JetsonOnboardCamera/src/onboard_camera/launch/: onboard_camera.launch
solver2/src/JetsonOnboardCamera/src/onboard_camera/src/: image_publisher.cpp  image_subscriber.cpp
